# HandGestures

./: 0.89testgestures.h5  Pipfile  README.md  handmodel copy.ipynb  handmodel.ipynb  hands-demo.ipynb  handtest.ipynb  mainUI.py  mp_utils.py  pyproject.toml  short_distance.py  webcam.py
ann_subsample/__MACOSX/: ._ann_subsample
ann_subsample/__MACOSX/ann_subsample/: ._call.json  ._dislike.json  ._fist.json  ._four.json  ._like.json  ._mute.json  ._ok.json  ._one.json  ._palm.json  ._peace.json  ._peace_inverted.json  ._rock.json  ._stop.json  ._stop_inverted.json  ._three.json  ._three2.json  ._two_up.json  ._two_up_inverted.json
