[tool.poetry]
name = "handgestures"
version = "0.1.0"
description = ""
authors = ["abundance <abundanceanyanwu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
customtkinter = "^5.1.3"
scikit-learn = "^1.2.2"
opencv-python = "^4.7.0.72"
mediapipe = "^0.10.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
